--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
+<!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="stylesheet.css" type="text/css"> 
+  <source src="script.js" type="text/javascript">
+</head>
 <body>
-<style>
-table,button,input{
-    height: 100%;
-    width: 100%;
-    font-size: 25px;
-}
 </style>
-
+<body>
 <table>
     <tr>
         <td colspan=4><center>CALCULATOR</center></td>
@@ -44,16 +43,5 @@ table,button,input{
 
 <script src="jquery.js"></script>
 
-<script type="text/javascript">
-    $('button').click(function(){
-        if($(this).html()=='='){
-            $('#display').val(eval($('#display').val()));
-        }else if ($(this).html()=='Clear'){
-            $('#display').val('');
-        }else{
-            $('#display').val($('#display').val() + $(this).html());
-        }
-    });
-</script>
 </body>
 </html>
